<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:key="@string/pref_location_key"
        android:title="@string/pref_location_label"
        android:defaultValue="@string/pref_location_default"
        android:inputType="text"
        android:singleLine="true">
    </EditTextPreference>

    <ListPreference
        android:key="@string/pref_unit_key"
        android:title="@string/pref_unit_label"
        android:dialogTitle="@string/pref_unit_label"
        android:entries="@array/pref_unit_entries_array"
        android:entryValues="@array/pref_unit_entryValue_array"
        android:defaultValue="@string/pref_unit_default" />

    <CheckBoxPreference
        android:title="@string/pref_enable_notifications_label"
        android:key="@string/pref_enable_notifications_key"
        android:summaryOff="@string/pref_enable_notifications_false"
        android:summaryOn="@string/pref_enable_notifications_true"
        android:defaultValue="@string/pref_enable_notifications_default" />

</PreferenceScreen>